--- a/booklist2.html
+++ b/booklist2.html
@@ -46,6 +46,8 @@
     <script>
         var lstBooks = [];
 
+        loadMaster("lnkStore");
+
         $(function() {
             var store = "";
             var b3 = "";
