--- a/category.html
+++ b/category.html
@@ -56,6 +56,7 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
+        loadMaster("lnkStore");
         $(function() {
             var store = "";
             if (window.localStorage.getItem("store") != null) {
