--- a/changepassword.html
+++ b/changepassword.html
@@ -65,6 +65,9 @@
 
     <script>
         var getApiToken = '';
+
+        loadMaster("lnkChangePassword");
+
         $(function() {
             if (window.localStorage.getItem("ApiToken") != null) {
                 getApiToken = window.localStorage.getItem("ApiToken");
