--- a/main.html
+++ b/main.html
@@ -49,6 +49,8 @@
     <script>
         var lstBooks = [];
 
+        loadMaster("lnkHome");
+
         $(function() {
             var rBookID = 0;
             var macaddress = require('macaddress');
