--- a/masterpage.html
+++ b/masterpage.html
@@ -68,76 +68,67 @@
     <aside id="leftsidebar" class="sidebar" style="margin-top:30px">
         <div class="menu">
             <ul class="list">
-                <li>
+                <li class="lnkHome menuList">
                     <a href="main.html">
                         <i class="material-icons">home</i>
                         <span>HOME</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
+                <li class="lnkLibrary menuList">
                     <a href="library.html">
                         <i class="material-icons">account_balance</i>
                         <span>LIBRARY</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
+                <li class="lnkStore menuList">
                     <a href="store.html">
                         <i class="material-icons">store</i>
                         <span>STORE</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
-                    <a href="#" class="lnkPurchase">
+                <li class="lnkPurchase menuList">
+                    <a href="purchase.html">
                         <i class="material-icons">attach_money</i>
                         <span>PURCHASE</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
-                    <a href="cartlist.html" class="lnkCart">
+                <li class="lnkCart menuList">
+                    <a href="cartlist.html">
                         <i class="material-icons">add_shopping_cart</i>
                         <span>CART</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
+                <li class="lnkAuthor menuList">
                     <a href="authorlist.html">
                         <i class="material-icons">contacts</i>
                         <span>AUTHORS</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
-                    <a href="myprofile.html" class="lnkMyProfile">
+                <li class="lnkMyProfile menuList">
+                    <a href="myprofile.html">
                         <i class="material-icons">account_box</i>
                         <span>MY PROFILE</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
-                    <a href="changepassword.html" class="lnkChangePassword">
+                <li class="lnkChangePassword menuList">
+                    <a href="changepassword.html">
                         <i class="material-icons">settings_applications</i>
                         <span>CHANGE PASSWORD</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
-                <li>
-                    <a href="sellwithus.html" class="lnkSellWithUs">
+                <li class="lnkSellWithUs menuList">
+                    <a href="sellwithus.html">
                         <i class="material-icons">shopping_cart</i>
                         <span>SELL WITH US</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
 
                 <li>
@@ -145,7 +136,6 @@
                         <i class="material-icons">lock</i>
                         <span>LOGOUT</span>
                     </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
             </ul>
         </div>
