--- a/authorlist.html
+++ b/authorlist.html
@@ -46,6 +46,9 @@
     <script>
         var lstBooks = [];
         var authors = [];
+
+        loadMaster("lnkAuthor");
+
         $(function() {
             var macaddress = require('macaddress');
             macaddress.one(function(err, mac) {
