--- a/store.html
+++ b/store.html
@@ -77,6 +77,7 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
+        loadMaster("lnkStore");
         $(".btnStore").click(function(e) {
             e.preventDefault();
 
