--- a/subcategory.html
+++ b/subcategory.html
@@ -56,6 +56,7 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
+        loadMaster("lnkStore");
         $(function() {
             var store = "";
             var categoryID = 0;
